@@ -1,3 +1,9 @@
+2006-12-19  Adrian Schuur
+
+	* msgqueue.c: 
+	Fixed 1616130: bad message during shutdown. Also fixes some
+	valgrind complaints.
+
 2006-12-18  Sven Schuetz
 	* cimslpCMPI.c, cimslp.c, cimslpCMPI.h, cimslpSLP.c, 
 	Fixed 1618258: slp problems when ssl is enabled
